--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -1,5 +1,5 @@
 logging:
   level:
-    org.springframework.cloud.gateway: DEBUG
-    org.springframework.web.reactive: DEBUG
-    reactor.netty.http.client: DEBUG
+    org.springframework.cloud.gateway: INFO
+    org.springframework.web.reactive: INFO
+    reactor.netty.http.client: INFO
