--- a/gateway-debug.yml
+++ b/gateway-debug.yml
@@ -3,6 +3,7 @@ logging:
     org.springframework.cloud.gateway: DEBUG
     org.springframework.web.reactive: DEBUG
     reactor.netty.http.client: DEBUG
+    org.springframework.data.redis: DEBUG
 resilience4j.circuitbreaker:
   instances:
     consumerBackend:
@@ -15,3 +16,10 @@ resilience4j.circuitbreaker:
       waitDurationInOpenState: 10s
       failureRateThreshold: 2
       eventConsumerBufferSize: 2
+spring:
+  data:
+    redis:
+      database: 12
+      host: localhost
+      port: 6379
+      #password: your_redis_password # 如果设置了密码
